--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,6 +3,7 @@ fontawesome-webfont.eot: fontawesome-webfont-7cf1b0de49e2f8672c9ad6d9e382115f.eo
 fontawesome-webfont.svg: fontawesome-webfont-4d19fdd70a080778557b652cb4868557.svg
 fontawesome-webfont.ttf: fontawesome-webfont-1e29be0bb354c9f664cbca7df9a966d8.ttf
 fontawesome-webfont.woff: fontawesome-webfont-9c0e35b95bf9cea29c77678ebf71a29d.woff
+favicon.ico: favicon-7270767b2a9e9fff880aa5de378ca791.ico
 spinner.gif: spinner-b453601dedaa15857695091b6d2e61ea.gif
 application.js: application-a5ff3794e7462b4d9595280d0900d027.js
 application.css: application-977e3017b75576ea4c3fc09792694fa1.css
