--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -47,6 +47,7 @@ flagging/audio/7.png: flagging/audio/7-727bd98a7e3c996c93bd5fcf5f7d7d5d.png
 flagging/audio/8.png: flagging/audio/8-5b076b468bfd55c624ee7ab11647df71.png
 flagging/audio/aac.png: flagging/audio/aac-eba1a35fcaa23f8a9ae72bb6353bdbf3.png
 flagging/audio/ac3.png: flagging/audio/ac3-ded535ff36c17a2daef0336587c93d92.png
+flagging/audio/dca.png: flagging/audio/dca-23fdd84e5a0189d761c64e22012a690d.png
 flagging/audio/dolbydigital.png: flagging/audio/dolbydigital-42fe75c1efcbc01b4ab4b9daf1ff861b.png
 flagging/audio/dolbydigitalplus.png: flagging/audio/dolbydigitalplus-8486bc0d23546c25d61316f5d68fc5d6.png
 flagging/audio/dtmsa-1.png: flagging/audio/dtmsa-1-c3468b820d6e5fc841111e002c78be93.png
