single_token accessush

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,6 +9,8 @@ fontawesome-webfont.woff: fontawesome-webfont-8255009c90d86ee3458a13f5db9a6ed0.w
 fontawesome-webfont/index.woff: fontawesome-webfont-8255009c90d86ee3458a13f5db9a6ed0.woff
 borg.gif: borg-c5fe2a3de607865869d41540c31d3437.gif
 borg/index.gif: borg-c5fe2a3de607865869d41540c31d3437.gif
+borg.png: borg-dc2cd4c954c4647e1c1762d65699894e.png
+borg/index.png: borg-dc2cd4c954c4647e1c1762d65699894e.png
 favicon.ico: favicon-1b13569e9620782f423d4cd3ce931750.ico
 favicon/index.ico: favicon-1b13569e9620782f423d4cd3ce931750.ico
 flagging/aspectratio/1.33.png: flagging/aspectratio/1.33-a50237a65d58247b46c84b08fda10fdd.png
