--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -205,10 +205,16 @@ flagging/video/wvc1.png: flagging/video/wvc1-39b4dc2406afcab070cb462319dfaab6.pn
 flagging/video/wvc1/index.png: flagging/video/wvc1-39b4dc2406afcab070cb462319dfaab6.png
 flagging/video/xvid.png: flagging/video/xvid-d09a8e3adb2cbc5c835ae58d0016c428.png
 flagging/video/xvid/index.png: flagging/video/xvid-d09a8e3adb2cbc5c835ae58d0016c428.png
+grey.gif: grey-0553d2decb64aef5b5cc67d6c8263983.gif
+grey/index.gif: grey-0553d2decb64aef5b5cc67d6c8263983.gif
 spinner.gif: spinner-3ef9f3e256c3c4f107557a03a41fe878.gif
 spinner/index.gif: spinner-3ef9f3e256c3c4f107557a03a41fe878.gif
-application.js: application-30315540fcec7734d1baf464e8872c73.js
-application/index.js: application-30315540fcec7734d1baf464e8872c73.js
+transparent.gif: transparent-2ebbd7cb21c3980daa0bddcc9c7ce5fc.gif
+transparent/index.gif: transparent-2ebbd7cb21c3980daa0bddcc9c7ce5fc.gif
+white.gif: white-5755332eb132a55af7ba0c5b6f452b7a.gif
+white/index.gif: white-5755332eb132a55af7ba0c5b6f452b7a.gif
+application.js: application-4ca6fc200bc0b73c99fe4b6ef67b7cf6.js
+application/index.js: application-4ca6fc200bc0b73c99fe4b6ef67b7cf6.js
 application.css: application-97bb0656130180e69983767106bc9150.css
 application/index.css: application-97bb0656130180e69983767106bc9150.css
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-7d1197a52442bc56fcad60d0390f4b32.png
